# OpenZemi

CMakeVer/: BuildJanken.sh  CMakeLists.txt  README
CMakeVer/include/: hello.h
CMakeVer/run/: BuildJanken.sh
CMakeVer/src/: main
Janken/C++/: README  func.h  main  main.cc
Janken/Python/: module.py
Janken/Tutorial/CMake/: CMakeLists.txt  README
Janken/Tutorial/CMake/src/: main.cc
Janken/Tutorial/RunC++/: README
JankenApp/: CMakeLists.txt  README  setup.sh
JankenApp/include/: BattleManager.h  Const.h  Global.h  MakeHands.h  StatManager.h
JankenApp/main/: main.cc
JankenApp/run/: BuildJanken.sh  setup.sh
JankenApp/src/: main.cc
JankenApp/src/BattleManager/: BattleManager.cc  CMakeLists.txt
JankenApp/src/MakeHands/: CMakeLists.txt  MakeHands.cc
JankenApp/src/StatManager/: CMakeLists.txt  StatManager.cc
